  Brian Bagnall has added:
  - MacOSX support

  Juergen Stuber has added:
  - added file TODO
  - Persistent memory
  - writeShort method in Native
  - moved methods from Native to Memory and ROM,
    and from ROM to Battery and MinuteTimer
  - removed Runtime as special class
  - corrected bug in scheduler that could interrupt wrong thread
  - renamed class josx.util.Test to Assertion, method assert to test etc.
    to avoid name class with JDK 1.4 reserved word assert
  
leJOS 1.0.4:
------------

  Juergen Stuber has added:
  - Serial listeners
  
  Paul Andrews has added (with a lot of help from Martin Nielsen):
  - Number formatting to StringBuffer
  - delete() method to StringBuffer
  - Fixed Math.log() and Math.exp() to handle a much larger range of numbers.

leJOS 1.0.3:
-----------

  Paul Andrews has added:
  - Fixed application download code. Fewer hangs now.
  - Added experimental USB support to firmdl and lejosrun. Set RCXTTY
    to 'usb'.
  - Added progress indicator to lejosrun.
  - Fixed uninitialised variable and boundary condition in
    interpreter that could have prevented task switching.
  - All input listeners now use one thread.
  - Added Proximity Sensor Class
  - Added Servo class
  - Added more accessor methods to sensor and motor classes.
  
  Juergen Stuber has added:
  - LCDConstants.java
  - idle_hook() in interpreter

leJOS 1.0.2:
------------

  Paul Andrews has added:
  - Added Runtime class so that heap size and free memory can be
    returned.
  - Added Object.wait()/notify()
  - Added thread priorities. Scheduler will always run threads
    of a greater priority in preference to those of a lower priority.
  - Added daemon threads.
  - Added ability to interrupt sleeping/waiting threads.
  - Added System.exit().
  - Added a 'Poll' class to monitor changes of sensors and buttons in
    the VM (i.e. a call that blocks until a state change occurs).
  - Changed Sensor and Button listeners to use Poll.